--- a/app/views/login.html
+++ b/app/views/login.html
@@ -24,14 +24,14 @@
                             <div class="col-sm-offset-3 col-sm-9">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" /> Remember me
+                                        <input type="checkbox" /> Remember meXX
                                     </label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group last">
                             <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" ng-click="singIn()" class="btn btn-success btn-sm">
+                                <button ng-click="singIn()" class="btn btn-success btn-sm">
                                     Sign in</button>
                                 <button type="reset" class="btn btn-default btn-sm">
                                     Reset</button>
