display mockup and project

--- a/app/views/templates/comment.html
+++ b/app/views/templates/comment.html
@@ -36,7 +36,8 @@
     <dir ng-repeat="comment in comments">
         <div class="col-xs-3 col-sm-2 col-md-2">
             <div class="thumbnail">
-                <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/avatar/{{comment.userId}}.jpg">
+                <!-- <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/avatar/{{comment.userId}}.jpg"> -->
+                <img class="img-responsive user-photo" src="https://i0.pngocean.com/files/129/94/328/computer-icons-avatar-icon-design-male-teacher.jpg">
             </div>
         </div>
         <div class="col-xs-12 col-sm-10 col-md-10">
