--- a/app/views/templates/last-news.html
+++ b/app/views/templates/last-news.html
@@ -3,35 +3,48 @@
         <div ng-repeat="comment in comments">
             <div class="col-xs-3 col-sm-2 col-md-2">
                 <div class="thumbnail" style="width: 60px;">
-                    <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/avatar/{{comment.userId}}.jpg" style="width: 60px;">
+                    <!-- <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/avatar/{{comment.userId}}.jpg" style="width: 60px;"> -->
+                    <img class="img-responsive user-photo"
+                        src="https://st3.depositphotos.com/3001613/14885/v/1600/depositphotos_148852215-stock-illustration-young-woman-face-avatar.jpg"
+                        style="width: 60px;">
                 </div>
             </div>
             <div class="col-xs-12 col-sm-10 col-md-10">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <strong>{{comment.userName}}</strong> <span class="text-muted"> Published At <time pubdate>{{comment.createdAt | date:'yyyy-MM-dd HH:mm:ss'}}</time></span>
+                        <strong>{{comment.userName}}</strong> <span class="text-muted"> Published At <time
+                                pubdate>{{comment.createdAt | date:'yyyy-MM-dd HH:mm:ss'}}</time></span>
                     </div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-12 col-sm-9 col-md-9">
                                 {{comment.comment}}
                                 <div>
-                                    <a href="/#!/mockup/{{comment.relationId}}" ng-show="comment.relationType == 'mockup'">{{comment.relationName}}</a>
-                                    <a href="/#!/project/{{comment.relationId}}" ng-show="comment.relationType == 'project'">{{comment.relationName}}</a>
-                                    <a href="/#!/user/{{comment.relationId}}" ng-show="comment.relationType == 'user'">{{comment.relationName}}</a>
+                                    <a href="/#!/mockup/{{comment.relationId}}"
+                                        ng-show="comment.relationType == 'mockup'">{{comment.relationName}}</a>
+                                    <a href="/#!/project/{{comment.relationId}}"
+                                        ng-show="comment.relationType == 'project'">{{comment.relationName}}</a>
+                                    <a href="/#!/user/{{comment.relationId}}"
+                                        ng-show="comment.relationType == 'user'">{{comment.relationName}}</a>
                                 </div>
                             </div>
                             <div class="col-xs-3 col-sm-3 col-md-3">
-                                <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/{{comment.relationId}}.png" ng-show="comment.relationType == 'mockup'">
-                                <img class="img-responsive user-photo" src="https://www.alcaweb.org/archfs/v3/gsacket/8/gNFtNF63rU.png" ng-show="comment.relationType == 'project'">
-                                <img class="img-responsive user-photo" src="{{globalService.BASE_PATH}}/images/avatar/{{comment.relationId}}.jpg" ng-show="comment.relationType == 'user'">
+                                <img class="img-responsive user-photo"
+                                    src="{{globalService.BASE_PATH}}/images/{{comment.relationId}}.png"
+                                    ng-show="comment.relationType == 'mockup'">
+                                <img class="img-responsive user-photo"
+                                    src="https://www.alcaweb.org/archfs/v3/gsacket/8/gNFtNF63rU.png"
+                                    ng-show="comment.relationType == 'project'">
+                                <img class="img-responsive user-photo"
+                                    src="{{globalService.BASE_PATH}}/images/avatar/{{comment.relationId}}.jpg"
+                                    ng-show="comment.relationType == 'user'">
 
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            </dir>
         </div>
     </div>
+</div>
 </div>
