--- a/app/views/mockup.html
+++ b/app/views/mockup.html
@@ -7,7 +7,9 @@
     </div>
 </div>
 <div class="row">
-    <a ng-show="currentworkflow.permission.edit == 'YES'" href="/#!/{{viewObject.editDesign}}" class="btn btn-sm btn-default" role="button" ng-if="editMode">Design</a>
+    <!-- <a ng-show="currentworkflow.permission.edit == 'YES'" href="/#!/{{viewObject.editDesign}}" class="btn btn-sm btn-default" role="button" ng-if="editMode">Design</a>
+     -->
+    <a href="/#!/{{viewObject.editDesign}}" class="btn btn-sm btn-default" role="button" ng-if="editMode">Design</a>
     <a href="/#!/{{viewObject.editDesign}}/suggest/{{suggestObject.id}}" class="btn btn-sm btn-info" role="button">Suggest</a>
 </div>
 <br>
