--- a/app/views/templates/registerUser.html
+++ b/app/views/templates/registerUser.html
@@ -11,7 +11,8 @@
             <!-- Username -->
             <label class="control-label" for="username">Username</label>
             <div class="controls">
-                <input type="text" id="username" name="username" ng-model="username" placeholder="User Name" class="input-xlarge" required>
+                <input type="text" id="userName" name="userName" ng-model="userName" placeholder="User Name"
+                    class="input-xlarge" required>
                 <p class="help-block">Username can contain any letters or numbers, without spaces</p>
             </div>
         </div>
@@ -19,7 +20,8 @@
             <!-- E-mail -->
             <label class="control-label" for="email">E-mail</label>
             <div class="controls">
-                <input type="text" id="email" name="email" ng-model="email" placeholder="example@gmail.com" class="input-xlarge" required>
+                <input type="text" id="email" name="email" ng-model="email" placeholder="example@gmail.com"
+                    class="input-xlarge" required>
                 <p class="help-block">Please provide your E-mail</p>
             </div>
         </div>
@@ -27,7 +29,8 @@
             <!-- Password-->
             <label class="control-label" for="password">Password</label>
             <div class="controls">
-                <input type="password" id="password" name="password" ng-model="password" placeholder="" class="input-xlarge" required>
+                <input type="password" id="password" name="password" ng-model="password" placeholder=""
+                    class="input-xlarge" required>
                 <p class="help-block">Password should be at least 4 characters</p>
             </div>
         </div>
@@ -35,7 +38,8 @@
             <!-- Password -->
             <label class="control-label" for="password_confirm">Password (Confirm)</label>
             <div class="controls">
-                <input type="password" id="password_confirm" name="password_confirm" ng-model="password_confirm" placeholder="" class="input-xlarge" required>
+                <input type="password" id="password_confirm" name="password_confirm" ng-model="password_confirm"
+                    placeholder="" class="input-xlarge" required>
                 <p class="help-block">Please confirm password</p>
             </div>
         </div>
