--- a/app/views/user-edit.html
+++ b/app/views/user-edit.html
@@ -1,4 +1,3 @@
-
 <div class="container">
     <h3> User Edit</h3>
     <br />
@@ -9,15 +8,11 @@
     <form role="form">
         <div class="form-group">
             <label for="name">First Name:</label>
-            <input type="text" ng-model="user.firstName" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="name">Last Name:</label>
-            <input type="text" ng-model="user.lastName" class="form-control">
+            <input type="text" ng-model="user.name" class="form-control">
         </div>
         <div class="form-group">
             <label for="name">User Name:</label>
-            <input type="text" ng-model="user.username" class="form-control">
+            <input type="text" ng-model="user.userName" class="form-control">
         </div>
         <div class="form-group">
             <label for="name">Email:</label>
@@ -27,7 +22,8 @@
             <!-- Password-->
             <label class="control-label" for="password">Password</label>
             <div class="controls">
-                <input type="password" id="password" name="password" ng-model="password" placeholder="" class="input-xlarge" required>
+                <input type="password" id="password" name="password" ng-model="password" placeholder=""
+                    class="input-xlarge" required>
                 <p class="help-block">Password should be at least 4 characters</p>
             </div>
         </div>
@@ -35,7 +31,8 @@
             <!-- Password -->
             <label class="control-label" for="password_confirm">Password (Confirm)</label>
             <div class="controls">
-                <input type="password" id="password_confirm" name="password_confirm" ng-model="password_confirm" placeholder="" class="input-xlarge" required>
+                <input type="password" id="password_confirm" name="password_confirm" ng-model="password_confirm"
+                    placeholder="" class="input-xlarge" required>
                 <p class="help-block">Please confirm password</p>
             </div>
         </div>
