integrate mockup item saving

--- a/app/views/mockup-edit-design.html
+++ b/app/views/mockup-edit-design.html
@@ -119,7 +119,7 @@
 <div id="design-div"
     style="border-width: 2px; border-style: solid; border-color: black; position: absolute; top: 156px; width: {{editObject.width}}px; height: {{editObject.height}}px; left: {{editObject.width < 500 ? 100: (1000/editObject.width * 280)}}px; background: white;">
 
-    <img ng-repeat="ite in mockupItems" ng-if="ite.type == 'image'" id="{{ite.type}}{{ite.id}}" alt="" context-menu
+    <img ng-repeat="ite in mockupItems" ng-if="ite.type == 'image'" id="{{ite.type}}{{ite.ID}}" alt="" context-menu
         data-target="menu-image-{{ite.id}}" class="{{itemStyle}}"
         style="padding:0; position: absolute; z-index:{{ite.position}}; width: {{ite.width}}px; height: {{ite.height}}px; top: {{ite.top}}px; left: {{ite.left}}px;"
         src="{{ite.src || srcPlaceholder}}" alt="..." height="">
@@ -127,17 +127,17 @@
 
 
 
-    <img ng-if="ite.type == 'reference'" id="{{ite.type}}{{ite.id}}" ng-repeat="ite in mockupItems" alt="" context-menu
+    <img ng-if="ite.type == 'reference'" id="{{ite.type}}{{ite.ID}}" ng-repeat="ite in mockupItems" alt="" context-menu
         data-target="menu-reference-{{ite.id}}" class="{{itemStyle}}"
         style="padding:0; position: absolute; z-index:{{ite.position}}; width: {{ite.width}}px; height: {{ite.height}}px; top: {{ite.top}}px; left: {{ite.left}}px;"
         src="{{ite.src}}" alt="..." height="">
 
-    <div ng-if="ite.type == 'container'" id="{{ite.type}}{{ite.id}}" ng-repeat="ite in mockupItems" alt="" context-menu
+    <div ng-if="ite.type == 'container'" id="{{ite.type}}{{ite.ID}}" ng-repeat="ite in mockupItems" alt="" context-menu
         data-target="menu-container-{{ite.id}}" class="{{itemStyle}}"
         style="padding:0; position: absolute; z-index:{{ite.position}}; width: {{ite.width}}px; height: {{ite.height}}px; top: {{ite.top}}px; left: {{ite.left}}px; background: {{ite.background}};"
         alt="..." height=""></div>
 
-    <button ng-if="ite.type == 'button'" id="{{ite.type}}{{ite.id}}" context-menu="" ng-repeat="ite in mockupItems"
+    <button ng-if="ite.type == 'button'" id="{{ite.type}}{{ite.ID}}" context-menu="" ng-repeat="ite in mockupItems"
         data-target="menu-button-{{ite.id}}" class="{{itemStyle}}"
         style="padding: 0px; position: absolute; height: {{ite.height}}px; width: {{ite.width}}px; top: {{ite.top}}px; left: {{ite.left}}px; z-index:{{ite.position}}; "
         alt="...">{{ite.text}}</button>
