open property details

--- a/app/views/mockup-edit-design.html
+++ b/app/views/mockup-edit-design.html
@@ -156,19 +156,19 @@
         ng-repeat="ite in mockupItems">
         <ul class="dropdown-menu" role="menu">
             <li>
-                <a class="pointer" role="menuitem" tabindex="1" ng-click="bringToFront(ite.type + ite.id);">Bring to
+                <a class="pointer" role="menuitem" tabindex="1" ng-click="bringToFront(ite.type + ite.ID);">Bring to
                     Front</a>
             </li>
             <li>
-                <a class="pointer" role="menuitem" tabindex="2" ng-click="sendToBackward(ite.type + ite.id);">Send
+                <a class="pointer" role="menuitem" tabindex="2" ng-click="sendToBackward(ite.type + ite.ID);">Send
                     Backward</a>
             </li>
             <li>
                 <a class="pointer" role="menuitem" tabindex="3"
-                    ng-click="loadProperties(ite.type + ite.id);">Properties</a>
+                    ng-click="loadProperties(ite.type + ite.ID);">Properties</a>
             </li>
             <li>
-                <a class="pointer" role="menuitem" tabindex="3" ng-click="deleteItem(ite.type + ite.id);">Delete</a>
+                <a class="pointer" role="menuitem" tabindex="3" ng-click="deleteItem(ite.type + ite.ID);">Delete</a>
             </li>
         </ul>
     </div>
