--- a/app/views/mockup-edit.html
+++ b/app/views/mockup-edit.html
@@ -9,30 +9,47 @@
         </div>
         <div class="form-group">
             <label for="name">Mockup Name:</label>
-            <input type="text" ng-model="editObject.name" class="form-control" id="name" name="mockupName" required>
-            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid" class="help-block"> Name cannot be empty </p>
+            <div ng-show="!editModeName" ng-click="editModeName= true">{{editObject.name}}</div>
+
+            <input ng-show="editModeName" type="text" ng-model="editObject.name" class="form-control" id="name"
+                name="mockupName" required>
+
+            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid"
+                class="help-block"> Name cannot be empty </p>
         </div>
         <div class="form-group">
             <label for="width">Mockup Width:</label>
-            <input type="text" ng-model="editObject.width" class="form-control" id="width" name="mockupName" required>
-            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid" class="help-block"> Width cannot be empty </p>
+            <div ng-show="!editModeWidth" ng-click="editModeWidth= true">{{editObject.width}}</div>
+
+            <input ng-show="editModeWidth" type="text" ng-model="editObject.width" class="form-control" id="width"
+                name="mockupName" required>
+            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid"
+                class="help-block"> Width cannot be empty </p>
         </div>
         <div class="form-group">
             <label for="height">Mockup Height:</label>
-            <input type="text" ng-model="editObject.height" class="form-control" id="height" name="mockupName" required>
-            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid" class="help-block"> Height cannot be empty </p>
+            <div ng-show="!editModeHeight" ng-click="editModeHeight= true">{{editObject.height}}</div>
+            <input ng-show="editModeHeight" type="text" ng-model="editObject.height" class="form-control" id="height"
+                name="mockupName" required>
+            <p style="color:red" ng-show="editMockupForm.mockupName.$touched && editMockupForm.mockupName.$invalid"
+                class="help-block"> Height cannot be empty </p>
         </div>
         <div class="form-group">
             <label for="description">Description:</label>
-            <textarea type="textarea" class="form-control" id="description" cols="30" rows="10" ng-model="editObject.description"></textarea>
+            <div ng-show="!editModeDescription" ng-click="editModeDescription= true">{{editObject.description}}</div>
+            <textarea ng-show="editModeDescription" type="textarea" class="form-control" id="description" cols="30"
+                rows="10" ng-model="editObject.description"></textarea>
         </div>
         <div class="form-group">
             <label for="imgToShow">Icon Image</label>
-            <input class="form-control" id="imgToShow" ng-model="editObject.imgToShow">
+            <div ng-show="!editModeImage" ng-click="editModeImage= true">{{editObject.imgToShow}}</div>
+            <input ng-show="editModeImage" class="form-control" id="imgToShow" ng-model="editObject.imgToShow">
         </div>
         <div>Updated At: {{editObject.createdAt}}</div>
         <div>Created: {{editObject.createdAt}}</div>
-        <button type="submit" class="btn btn-success" ng-click="save(editMockupForm)">Save</button>
-        <button type="submit" class="btn btn-danger" ng-click="cancel()">cancel</button>
+        <button ng-disabled="!editModeName && !editModeWidth && !editModeHeight && !editModeImage" type="submit"
+            class="btn btn-success" ng-click="save(!editMockupForm)">Save</button>
+        <button ng-disabled="!editModeName && !editModeWidth && !editModeHeight && !editModeImage" type="submit"
+            class="btn btn-danger" ng-click="cancel()">cancel</button>
     </form>
 </div>
