--- a/app/views/project-edit.html
+++ b/app/views/project-edit.html
@@ -8,16 +8,25 @@
         </div>
         <div class="form-group">
             <label for="name">Project Name:</label>
-            <input type="text" ng-model="project.name" class="form-control" id="name" placeholder="Project Name" name="projectName" required>
-            <p style="color:red" ng-show="editProjectForm.projectName.$touched && editProjectForm.projectName.$invalid" class="help-block"> Name cannot be empty </p>
+            <div ng-show="!editModeName" ng-click="editModeName= true">{{project.name}}</div>
+            <input ng-show="editModeName" type="text" ng-model="project.name" class="form-control" id="name"
+                placeholder="Project Name" name="projectName" required>
+            <p style="color:red" ng-show="editProjectForm.projectName.$touched && editProjectForm.projectName.$invalid"
+                class="help-block"> Name cannot be empty </p>
         </div>
         <div class="form-group">
             <label for="description">Description:</label>
-            <textarea class="form-control" name="" id="description" cols="30" rows="10" ng-model="project.description"></textarea>
+            <div ng-show="!editModeDescription" ng-click="editModedescription= true">{{project.description}}</div>
+            <div ng-show="editModeDescription">
+                <textarea class="form-control" name="description" id="description" cols="30" rows="10"
+                    ng-model="project.description"></textarea>
+
+            </div>
         </div>
         <div class="form-group">
             <label for="state">State:</label>
-            <input type="text" class="form-control" id="state" ng-model="project.type">
+            <div ng-show="!editModeState" ng-click="editModeState= true">{{project.state || "state"}}</div>
+            <input ng-show="editModeState" type="text" class="form-control" id="state" ng-model="project.state">
         </div>
         <div>Updated At: {{project.createdAt}}</div>
         <div>Created: {{project.createdAt}}</div>
