--- a/app/views/project-edit.html
+++ b/app/views/project-edit.html
@@ -15,22 +15,22 @@
                 class="help-block"> Name cannot be empty </p>
         </div>
         <div class="form-group">
-            <label for="description">Description:</label>
-            <div ng-show="!editModeDescription" ng-click="editModedescription= true">{{project.description}}</div>
-            <div ng-show="editModeDescription">
-                <textarea class="form-control" name="description" id="description" cols="30" rows="10"
-                    ng-model="project.description"></textarea>
-
-            </div>
-        </div>
-        <div class="form-group">
             <label for="state">State:</label>
             <div ng-show="!editModeState" ng-click="editModeState= true">{{project.state || "state"}}</div>
             <input ng-show="editModeState" type="text" class="form-control" id="state" ng-model="project.state">
         </div>
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <div ng-show="!editModeDescription" ng-click="editModeDescription= true">{{project.description}}</div>
+            <div ng-show="editModeDescription">
+                <textarea class="form-control" name="description" id="description" cols="30" rows="5"
+                    ng-model="project.description"></textarea>
+
+            </div>
+        </div>
         <div>Updated At: {{project.createdAt}}</div>
         <div>Created: {{project.createdAt}}</div>
-        <button type="submit" class="btn btn-success" ng-click="saveProject(editProjectForm)">Save</button>
-        <button type="submit" class="btn btn-danger" ng-click="cancel()">Cancel</button>
+        <button ng-disabled="!editModeName && !editModeState && !editModeDescription" type="submit" class="btn btn-success" ng-click="saveProject(editProjectForm)">Save</button>
+        <button ng-disabled="!editModeName && !editModeState && !editModeDescription" type="submit" class="btn btn-danger" ng-click="cancel()">Cancel</button>
     </form>
 </div>
