--- a/app/views/project.html
+++ b/app/views/project.html
@@ -89,14 +89,14 @@
 </div>
 
 <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog" role="document" style="width: 100%; height: 100%;">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="exitFullScreen()" data-dismiss="modal"
                     aria-label="Close"><span aria-hidden="true">Exit Presentation</span></button>
                 <h4 class="modal-title" id="myModalLabel">Mockup List Presentation</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="width: 100%;">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -108,7 +108,7 @@
                     <div class="carousel-inner" role="listbox">
                         <div ng-if="!mockup.isSuggest" class="item {{$index == 0? 'active' : ''}}"
                             ng-repeat="mockup in project.mockups track by $index">
-                            <img src="{{mockup.imgToShow}}" alt="Chania">
+                            <img src="{{mockup.imgToShow}}"  style="width: 80%;" alt="Chania">
                         </div>
                     </div>
                     <!-- Left and right controls -->
