remove container to display on full screen

--- a/app/views/templates/headerSide.html
+++ b/app/views/templates/headerSide.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="navbar navbar-default" role="navigation" style="margin: 0;">
-        <div class="container">
+        <div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -34,7 +34,7 @@
                                 </div>
                             </div>
                             <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
-                                <div class="container">
+                                <div>
                                     <div class="navbar-header pull-left">
                                         <a href="/#/" class="navbar-brand">Mockupero</a>
                                     </div>
