--- a/app/views/templates/last-news.html
+++ b/app/views/templates/last-news.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div class="row">
         <div ng-repeat="comment in comments">
             <div class="col-xs-3 col-sm-2 col-md-2">
