--- a/app/views/user-edit.html
+++ b/app/views/user-edit.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h3> User Edit</h3>
     <br />
     <div class="alert alert-danger" role="alert" ng-show="err">
