--- a/app/views/workflowlist.html
+++ b/app/views/workflowlist.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div class="alert alert-danger" role="alert" ng-show="err">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Error:</span> {{err}}
