--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div class="row">
         <div class="col-md-8 col-md-offset-1">
             <div class="panel panel-default">
