--- a/app/views/permission-item.html
+++ b/app/views/permission-item.html
@@ -1,6 +1,6 @@
-<h3 class="container">Permission Item </h3>
+<h3>Permission Item </h3>
 <br/>
-<div class="container" style="padding: 0; background-color: white">
+<div style="padding: 0; background-color: white">
     <div class="alert alert-danger" role="alert" ng-show="err">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Error: </span> {{err}}
