--- a/app/views/projectlist.html
+++ b/app/views/projectlist.html
@@ -1,4 +1,4 @@
-<div class="container" style="padding: 0;">
+<div style="padding: 0;">
     <h3> <button type="button" class="btn btn-default" aria-label="Left Align"  ng-click="addProject()" >
   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 </button> Projects </h3>
