--- a/app/views/templates/addObject.html
+++ b/app/views/templates/addObject.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h2>Create New {{objType}}</h2>
     <form role="form" name="addObjectForm">
         <div class="alert alert-danger" role="alert" ng-show="err">
