--- a/app/views/templates/footerSide.html
+++ b/app/views/templates/footerSide.html
@@ -1,5 +1,5 @@
 <div class="footer" ng-hide="hideFooter">
-    <div class="container">
+    <div>
         <p><span class="glyphicon glyphicon-heart"></span> from the Mockupero Team</p>
     </div>
 </div>
