--- a/app/views/templates/reuse-mockup.html
+++ b/app/views/templates/reuse-mockup.html
@@ -2,7 +2,7 @@
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 </button>
 <div id="mockupReuseModal" class="modal fade" role="dialog">
-    <div class="container">
+    <div>
         <div class="row">
             <div class="col-sm-12">
                 <h3>Mockups</h3>
@@ -16,7 +16,7 @@
                             <strong>{{userName}}</strong> <span class="text-muted"> Created At <time pubdate>{{mockupToReuse.createdAt | date:'yyyy-MM-dd HH:mm:ss'}}</time></span>
                         </div>
                         <div class="panel-body">
-                            <div class="container">
+                            <div>
                                 <div class="col-md-7">
                                     <div>
                                         <strong>Mockup: </strong>{{mockupToReuse.name}}
