--- a/app/views/workflow.html
+++ b/app/views/workflow.html
@@ -1,6 +1,6 @@
-<h3 class="container">Workflow </h3>
+<h3>Workflow </h3>
 <br/>
-<div class="container" style="padding: 0; background-color: white">
+<div style="padding: 0; background-color: white">
     <div class="alert alert-danger" role="alert" ng-show="err">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Error: </span> {{err}}
@@ -21,7 +21,7 @@
 </div>
 <br/>
 <br/>
-<div class="container" style="background: white;">
+<div style="background: white;">
     <h3>
         <button type="button" class="btn btn-default" aria-label="Left Align"  data-toggle="modal" data-target="#previousWorkflow" >
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -47,7 +47,7 @@
 </div>
 <br/>
 <br/>
-<div class="container" style="background: white;">
+<div style="background: white;">
     <h3>
         <button type="button" class="btn btn-default" aria-label="Left Align"  data-toggle="modal" data-target="#nextWorkflow" >
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
