--- a/app/views/mockup.html
+++ b/app/views/mockup.html
@@ -15,12 +15,11 @@
 </div>
 <br>
 <div class="row">
-    <img style="width: 1500px; background: #f9f9f9;" src="{{viewObject.imgToShow}}"
-        alt="..."> </div>
+    <img style="width: 300px; background: #f9f9f9;" src="{{viewObject.imgToShow}}" alt="..."> </div>
 <!-- <img style="width: {{viewObject.width}}px; max-width: 100%; background: #f9f9f9;" src="{{globalService.BASE_PATH}}/images/{{viewObject.id}}.png" alt="..."> </div> -->
 <div class="row" ng-show="mockups.length > 0">
     <h4>Mockup Suggests</h4>
-    <div class="col-xs-4 col-sm-3 col-md-3" ng-repeat="suggest in mockups"
+    <div class="col-xs-4 col-sm-2 col-md-2" ng-repeat="suggest in mockups"
         style="background: #aeb2ae; height: 270px; border: 3px; margin: 20px; padding: 0;">
         <div class="thumbnail" style="height: 270px; background: #aeb2ae;">
             <div class="caption">
