--- a/app/views/templates/projectList.html
+++ b/app/views/templates/projectList.html
@@ -1,7 +1,9 @@
 <div class="col-sm-12" style="padding: 1px;">
     <input type="text" placeholder="Search by Project Name" ng-model="searchName" ng-keyup="reloadProject(1)">
     <button type="button" class="btn btn-default" ng-click="sortByName()">
-        <span class="glyphicon {{ sortAsc?'glyphicon glyphicon-sort-by-alphabet-alt':'glyphicon-sort-by-alphabet'}}"></span> Sort By Name
+        <span
+            class="glyphicon {{ sortAsc?'glyphicon glyphicon-sort-by-alphabet-alt':'glyphicon-sort-by-alphabet'}}"></span>
+        Sort By Name
     </button>
     <div class="row" ng-repeat="project in projects">
         <div class="col-sm-12">
@@ -10,9 +12,12 @@
                     <h4 class="col-xs-6 col-sm-4">{{project.name}} </h4>
                     <div class="col-xs-6 col-sm-6">
                         <a href="/#!/project/{{project.Model.ID}}" class="btn btn-sm btn-primary" role="button">View</a>
-                        <button class="btn btn-sm btn-primary" role="button" data-toggle="modal" ng-click="reloadUsers(project.id)" data-target="#myModal">Share</button>
-                        <a href="/#!/project/edit/{{project.Model.ID}}" class="btn btn-sm btn-default" role="button">Edit</a>
-                        <a href="" ng-click="deleteProject(project.id)" class="btn btn-sm btn-danger" role="button">Delete</a>
+                        <button class="btn btn-sm btn-primary" role="button" data-toggle="modal"
+                            ng-click="reloadUsers(project.id)" data-target="#myModal">Share</button>
+                        <a href="/#!/project/edit/{{project.Model.ID}}" class="btn btn-sm btn-default"
+                            role="button">Edit</a>
+                        <a href="" ng-click="deleteProject(project.id)" class="btn btn-sm btn-danger"
+                            role="button">Delete</a>
                     </div>
                     <div class="col-xs-12 col-sm-12">{{project.description  | cut:true:200:' ...'}} </div>
                     <div class="col-xs-12 col-sm-12" style="color: darkgray;">
@@ -30,7 +35,7 @@
         <ul class="pagination">
             <li ng-repeat="projectPage in projectPages">
                 <a href="" class="active" ng-click="reloadProject(projectPage.pageIndex)">{{projectPage.pageLabel}}
-            </a>
+                </a>
             </li>
         </ul>
     </div>
